Fix [#36702] blenderapplication window position and size

On Windows the system window will be sized an positioned such that Blender screen area lower left
corner is at the requested location, and with dimension as requested.

Thanks to Alexander N. for reporting and Brecht van Lommel for input.